--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,3 +5,4 @@ INCLUDE_DIRECTORIES(../include)
 
 ADD_EXECUTABLE(example ${DIR_SRCS})  
 TARGET_LINK_LIBRARIES( example logger )
+TARGET_LINK_LIBRARIES( example output )
